# big-data-bowl-2025

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
data/metric/: play_disguise_results.csv  weighted_play_disguise_results.csv
notebooks/: chris_harris.ipynb  feature_selection.ipynb  figure4.ipynb  figure5.ipynb  probability_of_blitz.ipynb  submission.ipynb  table1.ipynb  table2.ipynb
scripts/: start_mlflow_ui.sh
src/: __init__.py
src/config/: __init__.py  logs.py  settings.py  training_settings.py
src/core/: __init__.py  positions.py  teams.py
src/data_processing/: process_data.py
src/data_processing/cleaning/: __init__.py  plays.py  tracking.py
src/data_processing/feature_engineering/: __init__.py  features.py
src/data_processing/inference/: __init__.py  dataset.py
src/data_processing/training/: __init__.py  datasets.py
src/inference/: __init__.py  predictions.py
src/io/: __init__.py  base.py  datasets.py
src/metric/: __init__.py  metric.py
src/training/: evaluation.py  model.py  train.py
src/utils/: colors.py  data_processing.py
src/visualization/: colors.py  field.py  plays.py
