[tool.poetry]
name = "src"
version = "0.1.0"
description = "Big Data Bowl 2025 repository"
authors = ["Miguel Duarte <miguelmendesduarte00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"

[tool.poetry.group.checks.dependencies]
isort = "^5.13.2"
black = "^24.10.0"
flake8 = "^7.1.1"
mypy = "^1.11.2"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pydocstyle = "^6.3.0"

[tool.poetry.group.notebooks.dependencies]
ipykernel = "^6.29.5"

[tool.poetry.group.commits.dependencies]
pre-commit = "^4.0.1"

[tool.isort]
profile = "black"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
show_error_codes = true
strict_equality = true
extra_checks = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
    "tests/*"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
